--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        platforms: linux/amd64,linux/arm64,linux/386,linux/riscv64
+        platforms: linux/amd64,linux/arm64,linux/386
         tags: finwo/adminer:latest
 
   # deploy:
