--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,8 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        platforms: linux/amd64,linux/arm64,linux/386,linux/arm64
-        tags: finwo/adminer:latest
+        platforms: linux/amd64,linux/arm64
+        tags: finwo/adminer:latest,finwo/adminer:4,finwo/adminer:4.8,finwo/adminer:4.8.1
 
   # deploy:
     # runs-on: ubuntu-latest
