--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64,linux/arm64/v6,linux/arm64/v7,linux/arm64/v8
         tags: finwo/adminer:latest,finwo/adminer:4,finwo/adminer:4.8,finwo/adminer:4.8.1
 
   # deploy:
