--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,12 +22,18 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        platforms: linux/amd64,linux/arm64,linux/arm64/v6,linux/arm64/v7,linux/arm64/v8
-        tags: finwo/adminer:latest,finwo/adminer:4,finwo/adminer:4.8,finwo/adminer:4.8.1
+    - name: Build
+      run: 'docker buildx build --platform linux/arm64,linux/amd64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7 . -t finwo/adminer:latest -t finwo/adminer:4 -t finwo/adminer:4.8 -t finwo/adminer:4.8.1'
+
+    - name: Push
+      run: docker push finwo/adminer
+
+    # - name: Build and push
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     push: true
+    #     platforms: linux/amd64,linux/arm64,linux/arm64/v6,linux/arm64/v7,linux/arm64/v8
+    #     tags: finwo/adminer:latest,finwo/adminer:4,finwo/adminer:4.8,finwo/adminer:4.8.1
 
   # deploy:
     # runs-on: ubuntu-latest
