--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,11 +22,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build
-      run: 'docker buildx build --platform linux/arm64,linux/amd64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7 . -t finwo/adminer:latest -t finwo/adminer:4 -t finwo/adminer:4.8 -t finwo/adminer:4.8.1'
-
-    - name: Push
-      run: docker push finwo/adminer
+    - name: Build and push
+      run: 'docker buildx build --platform linux/arm64,linux/amd64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7 . -t finwo/adminer:latest -t finwo/adminer:4 -t finwo/adminer:4.8 -t finwo/adminer:4.8.1 ; docker push finwo/adminer'
 
     # - name: Build and push
     #   uses: docker/build-push-action@v2
